website: Fix layout issue on front page when some images are not loaded

--- a/website/extra-scss/extra.scss
+++ b/website/extra-scss/extra.scss
@@ -839,7 +839,8 @@ small {
 
       img {
         max-width: 100%;
-        height: auto;
+        aspect-ratio: 4/3;
+
         background: rgba(0,0,0, 0.10);
         filter: drop-shadow(#00000040 0.0rem 0.3rem 0.6rem);
       }
